--- a/test/fixtures/buys.yml
+++ b/test/fixtures/buys.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
-  address: MyString
-  phone: 1
+  userid: 1
+  productid: 1
+  number: 1
 
 two:
-  name: MyString
-  address: MyString
-  phone: 1
+  userid: 1
+  productid: 1
+  number: 1
